[package]
name = "cloud-util"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core runtime
anyhow = "1"

# AWS SDK
aws-config = "1"
aws-types = "1"

aws-sdk-ec2 = { version = "1", optional = true }
aws-sdk-ssm = { version = "1", optional = true }
aws-sdk-codepipeline = { version = "1", optional = true }

[features]
ec2 = ["aws-sdk-ec2"]
ssm = ["aws-sdk-ssm"]
code-pipeline = ["aws-sdk-codepipeline"]
