[package]
name = "cloud-util"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core runtime
anyhow = "1"

# AWS SDK
aws-config = "1"
aws-types = "1"
thiserror = "2"

aws-sdk-ec2 = { version = "1", optional = true }
derive_more = { version = "2", optional = true, features = ["display"] }
regex = { version = "1", optional = true }
aws-sdk-ssm = { version = "1", optional = true }
aws-sdk-codepipeline = { version = "1", optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-sdk-dynamodb = { version = "1", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"], optional = true }
async-trait = "0.1.88"
reqwest = { version = "0", optional = true, features = ["json"] }
chrono = { version = "0", optional = true }
tracing = { version = "0", optional = true }

[features]
instance = ["aws-sdk-ec2", "derive_more", "regex", "serde"]
manager = ["aws-sdk-ssm"]
code-pipeline = ["aws-sdk-codepipeline"]
secretsmanager = ["aws-sdk-secretsmanager"]
table = ["aws-sdk-dynamodb", "serde", "serde_dynamo"]
metadata = ["reqwest"]
api = ["chrono", "tracing", "reqwest", "serde"]
